public/v/release-3.2/_sources/concepts/fiducials/apriltag/tutorial_isaac_sim.rst.txt
==============================================
Tutorial for AprilTag Detection with Isaac Sim
==============================================

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/fiducials/apriltag/Rviz_apriltag_output.png>`
    :align: center
    :width: 800px

Overview
------------

This tutorial walks you through a graph to estimate the 6DOF pose of
:ir_repo:`AprilTags <isaac_ros_apriltag>`
using images from Isaac Sim.

Tutorial Walkthrough
--------------------

1.  Complete the quickstart :ref:`here <repositories_and_packages/isaac_ros_apriltag/isaac_ros_apriltag/index:quickstart>`.
2.  Launch the Docker container using the ``run_dev.sh`` script:

    .. code:: bash

       cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
         ./scripts/run_dev.sh

3.  Launch the pre-composed graph launch file:

    .. code:: bash

       ros2 launch isaac_ros_apriltag isaac_ros_apriltag_isaac_sim_pipeline.launch.py

4.  Install and launch Isaac Sim following the steps in the :doc:`Isaac ROS Isaac Sim Setup Guide </getting_started/isaac_sim/index>`
5.  Press **Play** to start publishing data from the Isaac Sim.

    .. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/isaac_sim_sample_scene.png>`
        :align: center
        :width: 800px
    
6.  In a separate terminal, run RViz to visualize the AprilTag
    detections:

    .. code:: bash

       rviz2 -d $(ros2 pkg prefix isaac_ros_apriltag --share)/rviz/default.rviz

    .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/fiducials/apriltag/Rviz_apriltag_output.png>`
        :align: center
        :width: 800px
    
7.  If you prefer to observe the AprilTag output in text form, echo the
    contents of the ``/tag_detections`` topic with the following command
    in a separate terminal:

    .. code:: bash

       ros2 topic echo /tag_detections

    .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/fiducials/apriltag/Terminal_output.png>`
        :align: center
        :width: 600px

    
